--- a/openapi/src/main/resources/response/PeopleListResponse.yaml
+++ b/openapi/src/main/resources/response/PeopleListResponse.yaml
@@ -2,7 +2,7 @@ title: PeopleListResponse
 type: object
 description: People list
 properties:
-  prices:
+  content:
     type: array
     items:
       $ref: './PeopleResponse.yaml'
