--- a/openapi/src/main/resources/response/StarshipListResponse.yaml
+++ b/openapi/src/main/resources/response/StarshipListResponse.yaml
@@ -2,7 +2,7 @@ title: StarshipListResponse
 type: object
 description: People list
 properties:
-  prices:
+  content:
     type: array
     items:
       $ref: './StarshipResponse.yaml'
