--- a/app/infrastructure/pom.xml
+++ b/app/infrastructure/pom.xml
@@ -18,9 +18,15 @@
       <groupId>com.capitole.challenge</groupId>
       <artifactId>application</artifactId>
     </dependency>
+
     <dependency>
-      <groupId>com.capitole.challenge</groupId>
-      <artifactId>domain</artifactId>
+      <groupId>org.mapstruct</groupId>
+      <artifactId>mapstruct</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.jeasy</groupId>
+      <artifactId>easy-random-core</artifactId>
     </dependency>
   </dependencies>
 </project>
