--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+// build.gradle (root project)
+// Add pluginManagement block to specify where to find plugins
 plugins {
     id 'java'
     id 'org.springframework.boot' version '3.3.1' apply false
@@ -16,11 +18,9 @@ allprojects {
 subprojects {
     apply plugin: 'java'
     apply plugin: 'io.spring.dependency-management'
+    // You also need to apply the Spring Boot plugin in subprojects if they are Spring Boot applications
+    // apply plugin: 'org.springframework.boot'
 
-    // -- CORRECCIÓN --
-    // El bloque `dependencyManagement` se ha movido DENTRO de `subprojects`.
-    // Esto asegura que cada submódulo individual herede correctamente el BOM
-    // de Spring Boot y sepa qué versiones de dependencias debe usar.
     dependencyManagement {
         imports {
             mavenBom "org.springframework.boot:spring-boot-dependencies:3.3.1"
@@ -30,9 +30,8 @@ subprojects {
             dependency "io.rest-assured:rest-assured:5.4.0"
             dependency "org.mapstruct:mapstruct:1.5.5.Final"
             dependency "org.jeasy:easy-random-core:5.0.0"
-            dependency "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0"
+            dependency "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.4.0"
         }
-
     }
 
     java {
@@ -48,8 +47,6 @@ subprojects {
     }
 
     dependencies {
-        // Ahora, cuando Gradle vea 'org.projectlombok:lombok' sin versión,
-        // usará la versión especificada en el BOM de Spring Boot.
         compileOnly 'org.projectlombok:lombok'
         annotationProcessor 'org.projectlombok:lombok'
 
