--- a/openapi/src/main/resources/models/people.yaml
+++ b/openapi/src/main/resources/models/people.yaml
@@ -8,6 +8,12 @@ properties:
     format: date-time
     description: Created date of the character
     example: '2014-12-09T13:50:51.644000Z'
+  edited:
+    title: Created Date
+    type: string
+    format: date-time
+    description: Created date of the character
+    example: '2014-12-09T13:50:51.644000Z'
   name:
     type: string
     example: "Luke Skywalker"
@@ -32,6 +38,12 @@ properties:
   gender:
     type: string
     example: "male"
+  homeworld:
+    type: string
+    example: "https://swapi.info/api/people/2"
+  url:
+    type: string
+    example: "https://swapi.info/api/people/2"
 
 example:
   id: 1
