--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,10 @@
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        mavenCentral()
+    }
+}
+
 rootProject.name = 'starwars'
 
 include 'app'
@@ -11,8 +18,3 @@ include 'app:main'
 // Opcional: Si quieres que los nombres de los artefactos sean más limpios,
 // puedes renombrar los proyectos aquí. Esto no afecta la estructura de carpetas.
 project(':openapi').name = 'api-lib'
-//project(':app:domain').name = 'domain'
-//project(':app:application').name = 'application'
-//project(':app:infrastructure:rest-api').name = 'infrastructure-rest-api'
-//project(':app:infrastructure:rest-client').name = 'infrastructure-rest-client'
-//project(':app:main').name = 'main'
