--- a/app/infrastructure/rest-client/build.gradle
+++ b/app/infrastructure/rest-client/build.gradle
@@ -12,6 +12,8 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-validation') {
         exclude group: 'ch.qos.logback', module: 'logback-classic'
     }
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
     // Logbook para WebFlux
     implementation 'org.zalando:logbook-spring-webflux'
