Memory cache is working

--- a/app/infrastructure/rest-api/build.gradle
+++ b/app/infrastructure/rest-api/build.gradle
@@ -11,6 +11,8 @@ dependencies {
     // Spring Boot starters
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
+
 
     // Logbook
     implementation 'org.zalando:logbook-spring-boot-starter'
