--- a/openapi/src/main/resources/parameters/SortOrderQueryParam.yaml
+++ b/openapi/src/main/resources/parameters/SortOrderQueryParam.yaml
@@ -1,8 +1,8 @@
-name: sortOrder
+name: sort_order
 in: query
 description: Direction of the sort.
 required: false
 schema:
   type: string
-  enum: [asc, desc]
-  default: asc
+  enum: [ASC, DESC]
+  default: ASC
