--- a/app/pom.xml
+++ b/app/pom.xml
@@ -16,7 +16,7 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
-        <logbook.version>3.0.0</logbook.version>
+        <logbook.version>3.12.2</logbook.version>
         <easy-random-core.version>5.0.0</easy-random-core.version>
         <springdoc-openapi.version>1.8.0</springdoc-openapi.version>
         <rest-assured.version>5.4.0</rest-assured.version>
@@ -24,6 +24,7 @@
         <junit.platform.surefire.provider.version>1.3.2</junit.platform.surefire.provider.version>
         <junit.jupiter.engine.version>5.9.1</junit.jupiter.engine.version>
         <surefire.api.version>3.0.0-M5</surefire.api.version>
+        <okhttp.version>5.1.0</okhttp.version>
     </properties>
 
     <modules>
