Web site begins to work

--- a/app/main/pom.xml
+++ b/app/main/pom.xml
@@ -31,7 +31,10 @@
       <groupId>com.capitole.challenge</groupId>
       <artifactId>infrastructure-rest-client</artifactId>
     </dependency>
-
+    <dependency>
+      <groupId>com.capitole.challenge</groupId>
+      <artifactId>frontend</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
