Fixed problem in openapi files (match case) and dockerfile and docker compose. Frontend renamed as artifact to be consistent.

--- a/app/infrastructure/frontend/pom.xml
+++ b/app/infrastructure/frontend/pom.xml
@@ -8,7 +8,7 @@
         <version>0.0.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>frontend</artifactId>
+    <artifactId>infrastructure-frontend</artifactId>
     <name>frontend</name>
     <dependencies>
       <dependency>
