--- a/app/main/pom.xml
+++ b/app/main/pom.xml
@@ -33,8 +33,39 @@
     </dependency>
     <dependency>
       <groupId>com.capitole.challenge</groupId>
-      <artifactId>frontend</artifactId>
+      <artifactId>infrastructure-frontend</artifactId>
     </dependency>
   </dependencies>
+
+  <build>
+    <finalName>main</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <configuration>
+          <skip>false</skip>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>integration-test</id>
+            <goals>
+              <goal>test</goal>
+            </goals>
+            <phase>integration-test</phase>
+            <configuration>
+              <includes>
+                <include>**/*IT.java</include>
+              </includes>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
