--- a/app/main/build.gradle
+++ b/app/main/build.gradle
@@ -14,7 +14,7 @@ dependencies {
 }
 
 springBoot {
-    mainClass = 'com.capitole.challenge.Application'
+    mainClass = 'com.capitole.challenge.starwars.Application'
 }
 
 // -- CORRECCIÓN --
