--- a/app/pom.xml
+++ b/app/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.capitole.challenge</groupId>
+        <groupId>com.capitole.challenge.starwars</groupId>
         <artifactId>starwars</artifactId>
         <version>0.0.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
@@ -40,32 +40,32 @@
     <dependencyManagement>
         <dependencies>
           <dependency>
-            <groupId>com.capitole.challenge</groupId>
+            <groupId>com.capitole.challenge.starwars</groupId>
             <artifactId>domain</artifactId>
             <version>${project.version}</version>
           </dependency>
             <dependency>
-                <groupId>com.capitole.challenge</groupId>
+                <groupId>com.capitole.challenge.starwars</groupId>
                 <artifactId>application</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.capitole.challenge</groupId>
+                <groupId>com.capitole.challenge.starwars</groupId>
                 <artifactId>infrastructure-rest-api</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.capitole.challenge</groupId>
+                <groupId>com.capitole.challenge.starwars</groupId>
                 <artifactId>infrastructure-rest-client</artifactId>
                 <version>${project.version}</version>
             </dependency>
           <dependency>
-            <groupId>com.capitole.challenge</groupId>
+            <groupId>com.capitole.challenge.starwars</groupId>
             <artifactId>infrastructure-frontend</artifactId>
             <version>${project.version}</version>
           </dependency>
             <dependency>
-                <groupId>com.capitole.challenge</groupId>
+                <groupId>com.capitole.challenge.starwars</groupId>
                 <artifactId>api-lib</artifactId>
                 <version>${project.version}</version>
             </dependency>
