gradle is working

--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,7 @@ subprojects {
 
     tasks.withType(JavaCompile).configureEach {
         options.compilerArgs += [
+                "-parameters",
                 "-Amapstruct.defaultComponentModel=spring"
         ]
     }
