gradle is working

--- a/app/infrastructure/rest-client/build.gradle
+++ b/app/infrastructure/rest-client/build.gradle
@@ -3,7 +3,6 @@ plugins {
 }
 
 dependencies {
-    // Dependencias heredadas del módulo padre infrastructure
     implementation project(':app:application')
     implementation project(':app:domain')
 
@@ -13,17 +12,16 @@ dependencies {
         exclude group: 'ch.qos.logback', module: 'logback-classic'
     }
 
-    // Logbook para WebFlux
+    // Logbook for WebFlux
     implementation 'org.zalando:logbook-spring-webflux'
     implementation 'org.zalando:logbook-spring-boot-webflux-autoconfigure'
 
-    // Dependencias de test
+    // Dependencias for testing
     testImplementation 'com.squareup.okhttp3:okhttp'
     testImplementation 'com.squareup.okhttp3:mockwebserver'
     testImplementation 'org.jeasy:easy-random-core'
 }
 
-// Configuración específica para tests
 test {
     useJUnitPlatform()
 }
