mvn removed docker adapted to gradle

--- a/addons/docker/Dockerfile
+++ b/addons/docker/Dockerfile
@@ -6,13 +6,14 @@ WORKDIR /workdir
 
 COPY . .
 
-RUN ./mvnw --no-transfer-progress package -T 2 -DskipTests
+# RUN ./mvnw --no-transfer-progress package -T 2 -DskipTests
+RUN ./gradlew clean build -x test --parallel --max-workers=2
 
 # build
 FROM eclipse-temurin:17 as builder
 LABEL stage=builder
 RUN echo 'test'
-COPY --from=compiler /workdir/app/main/target/*.jar ./application.jar
+COPY --from=compiler /workdir/app/main/build/libs/*.jar ./application.jar
 
-EXPOSE 8080
+EXPOSE 8082
 ENTRYPOINT ["java","-Xms256m","-Xmx512m", "-jar", "application.jar"]
